--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -11,6 +11,8 @@ eureka:
 spring:
   application:
     name: apigateway-service
+#    ?? ??? Java ???? ?? ?? <br/>
+#    ?, ?? ??? ???? ?? ? ??.
   cloud:
     gateway:
       routes:
@@ -18,7 +20,13 @@ spring:
           uri: http://localhost:8081/
           predicates:
             - Path=/first-service/**
+          filters:
+            - AddRequestHeader=first-request, first-request-header2
+            - AddResponseHeader=first-response, first-response-header2
         - id: second_service
           uri: http://localhost:8082/
           predicates:
             - Path=/second-service/**
+          filters:
+            - AddRequestHeader=second-request, second-request-header2
+            - AddResponseHeader=second-response, second-response-header2
