--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -32,6 +32,21 @@
     </properties>
     <dependencies>
 
+        <!-- Micrometer Tracing으로 MSA 분산 추적 구현 -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing-bridge-brave</artifactId>
+        </dependency>
+        <!-- 분산 추적 내용을 zipkin으로 모니터링 -->
+        <dependency>
+            <groupId>io.zipkin.reporter2</groupId>
+            <artifactId>zipkin-reporter-brave</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
