--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -5,6 +5,12 @@ spring:
   application:
     name: user-service
 
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672 # 5672 is AMQP protocol port. 15672 is RabbitMQ UI port
+    username: guest # default value
+    password: guest # default value
+
   datasource:
     url: jdbc:h2:tcp://localhost/~/testdb
     username: sa
@@ -43,7 +49,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh, health, beans
+        include: refresh, health, beans, busrefresh
         # refresh : Config Server에서 가져온 정보를 refresh하기 위함
         # = Config Server에서 정보가 변경되었을때, 이 엔드포인트를 호출하면 MS를 재기동할 필요가 없음
         # 다른 엔드포인트와 다르게 POST 방식으로 요청
