--- a/apigateway-service/pom.xml
+++ b/apigateway-service/pom.xml
@@ -68,6 +68,7 @@
             <version>2.3.1</version>
         </dependency>
 
+        <!-- Spring Cloud Bus -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bus-amqp</artifactId>
