--- a/apigateway-service/src/main/resources/bootstrap.yml
+++ b/apigateway-service/src/main/resources/bootstrap.yml
@@ -6,4 +6,5 @@ spring:
   cloud:
     config:
       uri: http://127.0.0.1:8888
-      name: ecommerce # config server에 위치한 yaml 파일 이름
+#      name: ecommerce # config server에 위치한 yaml 파일 이름
+      name: config-serice
