--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -65,6 +65,6 @@ logging:
   level:
     io.dongvelop: DEBUG
 
-#token:
-#  expiration_time: 86400000
-#  secret: user_token
+token:
+  expiration_time: 86400000
+  secret: user_token
