feat : OpenFeign & ErrorDecoder 사용법

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -64,7 +64,7 @@ logging:
 #  pattern:
 #    level: "%5p [%X{traceId:-},%X{spanId:-}]"
   level:
-    io.dongvelop: DEBUG
+    io.dongvelop.userservice.client: DEBUG
 
 token:
   expiration_time: 86400000
