feat : Zipkin을 이용한 Microservice 분산 추적 구현

--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -125,6 +125,19 @@
             <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
         </dependency>
 
+        <!-- Micrometer Tracing으로 MSA 분산 추적 구현 -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing-bridge-brave</artifactId>
+        </dependency>
+
+        <!-- 분산 추적 내용을 zipkin으로 모니터링 -->
+        <dependency>
+            <groupId>io.zipkin.reporter2</groupId>
+            <artifactId>zipkin-reporter-brave</artifactId>
+        </dependency>
+
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
