feat : Micrometer 개요 및 구현

--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -103,6 +103,19 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+
+        <!-- Micrometer 지표를 Prometheus로 보내는 라이브러리 -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+        <!-- Config 데이터 변경시, refresh endpoint를 이용해 적용하는 방식을 위함 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
