--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -137,6 +137,12 @@
             <artifactId>zipkin-reporter-brave</artifactId>
         </dependency>
 
+        <!-- Micrometer 지표를 Prometheus로 보내는 라이브러리 -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
 
     </dependencies>
     <dependencyManagement>
