--- a/apigateway-service/pom.xml
+++ b/apigateway-service/pom.xml
@@ -74,6 +74,13 @@
             <artifactId>spring-cloud-starter-bus-amqp</artifactId>
         </dependency>
 
+
+        <!-- Micrometer 지표를 Prometheus로 보내는 라이브러리 -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
