feat : Config Server Docker Image 빌드 및 관련 네트워크 설정 수정

--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>io.dongvelop</groupId>
-    <artifactId>config-server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>config-server</name>
+    <artifactId>config-service</artifactId>
+    <version>1.0.0</version>
+    <name>config-service</name>
     <description>config-server</description>
     <url/>
     <licenses>
