feat : Discovery Service Docker Image 빌드 및 관련 네트워크 설정 수정

--- a/discoveryservice/src/main/resources/application.yml
+++ b/discoveryservice/src/main/resources/application.yml
@@ -5,7 +5,11 @@ spring:
   application:
     name: discoveryservice
 
-# ?? ??? discovery? ???? ??? ??
+  cloud:
+    config:
+      uri: http://127.0.0.1:8888 # local 실행시 주소
+      name: ecommerce
+
 eureka:
   client:
     register-with-eureka: false
