--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -5,6 +5,14 @@ spring:
   application:
     name: catalog-service
 
+  ############ k8s Configuration ############
+  kafka:
+    consumer:
+      bootstrap-servers: ${BOOTSTRAP-SERVERS} # kafka 클러스터에 대한 초기 연결에 사용할 호스트
+      group-id: consumer_group01
+      auto-offset-reset: earliest
+  ############ k8s Configuration ############
+
   datasource:
     url: jdbc:mysql://localhost:3306/mydb?useSSL=false&serverTimezone=Asia/Seoul&autoReconnect=true&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
     username: root
