--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -2,13 +2,13 @@
 # bootstrap.yml 은 application-*.yml 보다 먼저 읽힌다.
 ######################################################
 
-spring:
+#spring:
 #  profiles:
 #    active: dev
 
-  cloud:
-    config:
-      uri: http://127.0.0.1:8888
-#      name: ecommerce # config server에 위치한 yaml 파일 이름
-#      name: config-service # Config Server application name을 명시 (= Config Server의 application.yml을 불러옴을 의미)
-      name: user-service # Config Server의 user-service.yml을 불러옴을 의미
+#  cloud:
+#    config:
+#      uri: http://127.0.0.1:8888
+##      name: ecommerce # config server에 위치한 yaml 파일 이름
+##      name: config-service # Config Server application name을 명시 (= Config Server의 application.yml을 불러옴을 의미)
+#      name: user-service # Config Server의 user-service.yml을 불러옴을 의미
